# Kanvas

./: .env  .gitignore  Makefile  README.md  db.sqlite3  manage.py  pyproject.toml  report.txt  requirements.txt  test_api.py
courses/: models.py  serializers.py  urls.py  views.py
courses/migrations/: 0001_initial.py  0002_alter_courses_name.py
entrega10/: asgi.py  settings.py  urls.py  wsgi.py
kanvas/: asgi.py  settings.py  urls.py  wsgi.py
kanvas/courses/: apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
kanvas/courses/migrations/: 0001_initial.py  0003_alter_courses_created_at.py
kanvas/users/: apps.py  permissions.py  urls.py  views.py
kanvas/users/migrations/: 0003_rename_number_address_house_number.py  0004_alter_address_zip_code.py  0005_alter_users_address.py  0006_alter_users_address.py  0007_alter_users_address.py
users/: models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_address_users_address.py  0002_alter_users_username.py  0003_rename_number_address_house_number.py  0004_alter_address_zip_code.py  0005_alter_users_address.py  0006_alter_users_address.py  0007_alter_users_address.py
